--- a/index.html
+++ b/index.html
@@ -535,18 +535,137 @@
   </section>
 
   <!-- Feedback -->
-  <section id="feedback" class="section" aria-labelledby="testiTitle">
-    <div class="wave wave-top" aria-hidden="true">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none" class="text-[var(--body)]" fill="currentColor"><path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"/></svg>
+
+<section id="reviews" class="section relative overflow-hidden"
+         aria-labelledby="reviewsTitle">
+
+  <!-- Top decorative wave -->
+  <div class="wave wave-top" aria-hidden="true">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none"
+         class="text-[var(--body)]" fill="currentColor">
+      <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"/>
+    </svg>
+  </div>
+
+  <div class="max-w-7xl mx-auto px-4 relative z-[1]">
+    <!-- Section heading -->
+    <header class="mb-10 text-center">
+      <h2 id="reviewsTitle" class="text-4xl font-bold text-[var(--calm)] tracking-tight mb-3">
+        Feedback 
+      </h2>
+      <p class="text-slate-600 dark:text-slate-300 max-w-3xl mx-auto text-lg">
+        Was Familien über unsere Arbeit sagen.
+      </p>
+    </header>
+
+    <!-- Row 1: Official badges (Google / ProvenExpert) -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 lg:gap-10 max-w-5xl mx-auto mb-12"
+         data-reviews-badges>
+      
+      <!-- Google Review -->
+      <article class="review-badge">
+        <div class="review-badge__head">
+          <img src="./img/google-g.svg" alt="Google logo" class="w-7 h-7" />
+          <div>
+            <strong class="block">Google-Rezensionen</strong>
+            <span class="text-slate-500 dark:text-slate-300 text-sm">Ø 4,9 / 5</span>
+          </div>
+        </div>
+        <p class="review-badge__text">
+          „Die beste Entscheidung für unsere Mutter. Regelmäßige Berichte, deutlich bessere Lebensqualität.“
+        </p>
+        <div class="review-badge__stars" aria-label="5 Sterne">
+          ★★★★★
+        </div>
+      </article>
+
+      <!-- ProvenExpert Review -->
+      <article class="review-badge">
+        <div class="review-badge__head">
+          <img src="./img/provenexpert.svg" alt="ProvenExpert logo" class="h-6" />
+          <div>
+            <strong class="block">ProvenExpert</strong>
+            <span class="text-slate-500 dark:text-slate-300 text-sm">100% Empfehlungen</span>
+          </div>
+        </div>
+        <p class="review-badge__text">
+          „Kompetent, herzlich und zuverlässig. Wir fühlen uns in jeder Situation gut begleitet.“
+        </p>
+        <div class="review-badge__stars" aria-label="5 Sterne">
+          ★★★★★
+        </div>
+      </article>
     </div>
-    <div class="fade-in max-w-6xl mx-auto px-4">
-      <h2 id="testiTitle" class="text-3xl font-bold text-center mb-6">Feedback</h2>
-      <div class="grid md:grid-cols-2 gap-6">
-        <figure class="card"><blockquote class="italic">„Sehr ruhig, freundlich, gut organisiert. Meine Mutter hat wieder Tagesstruktur.“</blockquote><figcaption class="mt-3 text-sm text-slate-600 dark:text-slate-400">— Tochter von Frau K.</figcaption></figure>
-        <figure class="card"><blockquote class="italic">„Ambulante Pflege zuverlässig und herzlich. Danke für die Entlastung.“</blockquote><figcaption class="mt-3 text-sm text-slate-600 dark:text-slate-400">— Herr M.</figcaption></figure>
+
+    <!-- Row 2: Warm emotional slider with photos -->
+    <div id="reviewsViewport" class="review-viewport">
+      <div id="reviewsTrack" class="review-track">
+
+        <!-- Slide 1 -->
+        <figure class="review-hero">
+          <img src="./img/rev-1.jpg" alt="Familienfoto" class="review-hero__img" />
+          <figcaption class="review-hero__cap">
+            <svg viewBox="0 0 24 24" class="w-6 h-6 opacity-80">
+              <path fill="currentColor" d="M7 17h3l2-6V7H6v4h3zM14 17h3l2-6V7h-6v4h3z"/>
+            </svg>
+            <blockquote>
+              Das ist Ihr Verdienst! Meine Mutter schreibt selten Bewertungen, aber über Ihre Hilfe – nur warme Worte.
+              Herzlichen Dank für Ihre Fürsorge und Ihren Respekt.
+            </blockquote>
+            <div class="review-hero__who">— Margo S.</div>
+          </figcaption>
+        </figure>
+
+        <!-- Slide 2 -->
+        <figure class="review-hero">
+          <img src="./img/rev-2.jpg" alt="Zufriedene Familie" class="review-hero__img" />
+          <figcaption class="review-hero__cap">
+            <svg viewBox="0 0 24 24" class="w-6 h-6 opacity-80">
+              <path fill="currentColor" d="M7 17h3l2-6V7H6v4h3zM14 17h3l2-6V7h-6v4h3z"/>
+            </svg>
+            <blockquote>
+              Wir sind sehr zufrieden: klare Kommunikation, verlässlich und herzlich. Absolute Empfehlung!
+            </blockquote>
+            <div class="review-hero__who">— Familie K.</div>
+          </figcaption>
+        </figure>
+
+        <!-- Slide 3 -->
+        <figure class="review-hero">
+          <img src="./img/rev-3.jpg" alt="Betreuung zu Hause" class="review-hero__img" />
+          <figcaption class="review-hero__cap">
+            <svg viewBox="0 0 24 24" class="w-6 h-6 opacity-80">
+              <path fill="currentColor" d="M7 17h3l2-6V7H6v4h3zM14 17h3l2-6V7h-6v4h3z"/>
+            </svg>
+            <blockquote>
+              Durch die regelmäßigen Besuche ist unsere Mutter viel ruhiger. Wir vertrauen Ihnen zu 100 %.
+            </blockquote>
+            <div class="review-hero__who">— Anna & Michael</div>
+          </figcaption>
+        </figure>
       </div>
+
+      <!-- Dots / Pagination -->
+      <div id="reviewsDots" class="review-dots" aria-label="Slides der Bewertungen"></div>
     </div>
-  </section>
+  </div>
+
+  <!-- Bottom decorative wave -->
+  <div class="wave wave-bottom rotate-180 mt-10" aria-hidden="true">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 120" preserveAspectRatio="none"
+         class="text-white" fill="currentColor">
+      <path d="M0,0V120H1440V0C1106,77,348,-53,0,0Z"/>
+    </svg>
+  </div>
+</section>
+
+
+
+
+
+
+
+
 
   <!-- FAQ -->
   <section id="faq" class="section" aria-labelledby="faqTitle">
