--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               src="./img/LEBENSANKER-14.png"
               class="logo-light w-[42px] h-[42px] object-contain logo-pulse"
               alt="Lebensanker Logo" />
-            <span class="font-semibold text-white tracking-wide">Lebensanker </span>
+            <span class="font-semibold text-white tracking-wide">Lebensanker</span>
           </div>
         </div>
 
@@ -1123,7 +1123,8 @@
         </svg>
       </div>
       <div class="fade-in max-w-6xl mx-auto px-4">
-        <h2 id="karriereTitle" class="fx-title">Karriere</h2>
+        <h2 id="karriereTitle" class="fx-title fx-title--classic">Karriere</h2>
+
         <p class="text-center max-w-3xl mx-auto text-slate-600 dark:text-slate-300 mb-8">
           Wertschätzendes Umfeld, ruhige Abläufe, Team auf Augenhöhe. Teil- und Vollzeit möglich.
         </p>
