--- a/index.html
+++ b/index.html
@@ -1792,7 +1792,7 @@
             Rechtliches
           </h4>
           <ul class="space-y-2 text-[0.9rem] text-slate-100/85">
-            <li><a href="/impressum.html" class="footer-link">Impressum</a></li>
+            <li><a href="https://github.com/serdjuktanya/lebensanker-kaiserslautern.de/blob/main/impressum.html" class="footer-link">Impressum</a></li>
             <li><a href="/datenschutz.html" class="footer-link">Datenschutz</a></li>
             <li><a href="/cookies.html" class="footer-link">Cookie-Hinweis</a></li>
           </ul>
