--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="de" class="scroll-smooth">
+<html lang="de" class="scroll-smooth dark">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,7 +17,6 @@
     <meta name="theme-color" content="#8C9478" />
     <!--<meta name="color-scheme" content="light" />-->
     <meta name="color-scheme" content=" light dark" />
-
     <!-- SEO -->
     <title>
       Lebensanker Pflegedienst in Kaiserslautern – Ambulanter Pflegedienst, Tagespflege & Psychiatrische Pflege
