--- a/index.html
+++ b/index.html
@@ -292,10 +292,20 @@
   <div class="hero__inner fade-in relative z-[1]">
     <div class="hero__content max-w-2xl">
       <!-- Overline / Label -->
-      <p class="mb-3 inline-flex items-center gap-2 rounded-full bg-white/70 px-3 py-1 text-[0.78rem] font-medium tracking-[0.22em] uppercase text-[#4B5338] shadow-sm">
-        <span class="h-1.5 w-1.5 rounded-full bg-emerald-400"></span>
-        Ruhig · Verlässlich · Nah
-      </p>
+ <p
+  class="mb-3 inline-flex flex-wrap items-center justify-center gap-1.5
+         rounded-full bg-white/80 px-3 py-1.5
+         text-[0.7rem] sm:text-[0.78rem]
+         tracking-[0.12em] sm:tracking-[0.22em]
+         uppercase text-[#4B5338] text-center shadow-sm"
+>
+  <span class="flex items-center justify-center text-[0.75rem]" style="color: var(--camel);">
+    ♥
+  </span>
+  <span>
+    Ruhig · Verlässlich · Nah
+  </span>
+</p>
 
       <!-- Haupttitel -->
       <h1 id="heroTitle" class="text-3xl sm:text-4xl lg:text-5xl font-semibold leading-tight text-[#2B2D26]">
@@ -304,7 +314,7 @@
 
       <!-- Subline -->
       <p class="mt-4 text-base sm:text-lg text-slate-600">
-        Ambulanter Pflegedienst, Tagespflege und ambulante psychiatrische Pflege in Kaiserslautern –
+        Ambulanter Pflegedienst, Tagespflege <!--und ambulante psychiatrische Pflege -->in Kaiserslautern –
         für Menschen, die Sicherheit, Struktur und echte Zuwendung brauchen.
       </p>
 
