--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
         <p class="angebote-subtitle">Ambulante Pflege · Tagespflege · Beratung</p>
 
         <!-- Cards -->
-        <div class="angebote-grid">
+       <div class="angebote-grid grid gap-6 grid-cols-1 md:grid-cols-2 xl:grid-cols-3">
           <!-- Card 1: Ambulanter Pflegedienst -->
           <article class="angebot-card la-card" id="angebot-pflege">
             <div class="angebot-content">
